--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,7 @@
 	<ul>
 		<div class="option_logo"><%= link_to 'Quba', "/" %></div>
 		<div class="option"><%= link_to('Top List', '/main_page/top_list') %></div>
+		<div class="option"><%= link_to('Random', '#')%></div>
 		<div class="option"><%= link_to('Log in', '#')%></div>
 	</ul>
 </div>
