--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,25 @@
 <% provide(:title, "Sign Up" )%>
-<h1>Sign up</h1>
-<p>This will be a sign-up path for new users.</p>
+<div id="signup">
+	<h1 style="text-align: center; font-size: 35px;">Sign up</h1>
+	<div class="row">
+		<div>
+			<%= form_for(@user) do |f| %>
+				<%= render 'shared/error_messages' %>				
+				
+				<%= f.label :name %>
+				<%= f.text_field :name %>
+				<br><br>
+				<%= f.label :email %>
+				<%= f.email_field :email %>
+				<br><br>
+				<%= f.label :password %>
+				<%= f.password_field :password %>
+				<br><br>
+				<%= f.label :password_confirmation, "Confirmation" %>
+				<%= f.password_field :password_confirmation %>
+				<br><br>
+				<%= f.submit "Create my account", class: "submit" %>
+			<% end %>
+		</div>
+	</div>
+</div>
