--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -27,7 +27,6 @@ body {
 	font-family: 'Lato', sans-serif;
 	margin: 0;
 	padding: 0;
-	margin-bottom: 1px;
 	}
 
 .container {
@@ -97,6 +96,7 @@ body {
 /* footer */
 
 .footer {
+	font-size: 16px;
 	border-top: 2px solid black;
 	padding: 10px 0 10px;
 	margin-bottom: 0px;
@@ -146,11 +146,7 @@ label {
 	width: 50%
 	
 }
-/*.submit {
-	color: green;
-	font-weight: bold;
-	float: left;
-}*/
+
 input.submit {
 	width: 100%;
 	margin: auto;
@@ -169,7 +165,7 @@ input {
 	width: 375px;
 }
 textarea:focus, input:focus {
-	border: 1px solid #0000CD;
+	border: 1px solid green;
 	background: #99CCCC;
 }
 
