Log in log out finish

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -32,3 +32,14 @@
 	margin-left: 10px;
 	margin-right: 10px;
 }
+
+.alert-danger {
+	text-align: center;
+	width: 50%;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin: auto;
+	background: AntiqueWhite;
+	color: red;
+	border: 1px solid red;
+}
