--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -180,26 +180,23 @@ label {
 .dropdown {
 		float: left;
 		color: white;
-
 		ul {
-
 		-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 		-moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 		list-style: none;
 
 			ul {
-				display:block;
+				display: block;
 	 		  opacity: 0;
-				-webkit-transition: opacity 0.5s;
+				-webkit-transition: opacity 0.4s;
 				-moz-transition: opacity 0.4s;
 			a {
 				background: #333333!important;
 			}
 			}
 			li:hover > ul { 
-				display: block;
 				opacity: 1;
-
+				display: block;
 			}
 			ul li {
 				margin-left: -40px;
@@ -228,4 +225,77 @@ label {
 	}
 }
 
+/* User index */
+.user_list {
+	
+	h1 {
+		margin-left: 50px;
+		color: #009966;
+		font-size: 35px;
+	}
+	.users {
+		list-style: none;
+		li {
+			color: white;
+			overflow: auto;
+			margin-right: 40px;
+			padding: 10px 0;
+			border-bottom: 2px solid #333333;
+		}
+		a {
+			text-decoration: none;
+			color: white;
 
+		&:hover {
+			color: #009933;
+		}
+			
+		}
+		
+	}
+}
+
+.pagination {
+	list-style: none;
+	display: inline-block;
+	width: 700px;
+	height: auto;
+	li {
+		float: left;
+	}
+	a {
+		font-size: 10px;
+		background: #282828;;
+		text-decoration: none;
+		text-align: center;
+		line-height: 35px;
+		font-weight: bold;
+		border-top: 1px solid white;
+		border-bottom: 1px solid white;
+		color: white;
+		display: block;
+		width: 67px;
+		height: 35px;
+	}
+	a:hover, a:active {
+		color: #009966;
+		background: #333333;
+		border-top: 3px solid white;
+		border-bottom: 3px solid white;
+		height: 30px;
+		line-height: 32px;
+	}
+
+	.prev {
+	border-left: 1px solid white;
+	}
+
+	.next {
+		border-right: 1px solid white;
+	}
+}
+#del {
+	a:hover {
+		color: red!important;
+	}
+}
