--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -227,13 +227,18 @@ label {
 
 /* User index */
 .user_list {
-	
+	img {
+		padding-top: 15px;
+		margin-right: 5px;
+	}
+
 	h1 {
 		margin-left: 50px;
 		color: #009966;
 		font-size: 35px;
 	}
 	.users {
+		line-height: 80px;
 		list-style: none;
 		li {
 			color: white;
@@ -295,7 +300,8 @@ label {
 	}
 }
 #del {
+	float: right;
 	a:hover {
-		color: red!important;
+		color: red;
 	}
 }
