Finish simple posts

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -43,3 +43,12 @@
 	color: red;
 	border: 1px solid red;
 }
+
+.gravataredit {
+	margin-bottom: 50px;
+	margin-left: -5px;
+	a {
+	 	color: red;
+	}
+}
+
