--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,7 @@
 		<% end %>
 		<% if logged_in? %>
 			<div class="option">
-				<%= link_to('Add', '#')%>
+				<%= link_to('Add', '/posts/new')%>
 			</div>
 		<% end %>
 	</ul>
