--- a/app/views/main_page/home.html.erb
+++ b/app/views/main_page/home.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "Home" )%>
-<div class="content">
-	SOME CONTENT
-</div>
+	<div class="show_posts">
+				<%= render 'shared/feed' %>
+	</div>
+
