Add posts liking

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -81,7 +81,7 @@ body {
 			height: 50px;
 		}
 	}
-	
+
 	a:hover, a:active {
 		background-color: #009966!important;
 	}
@@ -105,7 +105,7 @@ body {
   bottom:0;
   height:auto;   /* Height of the footer */
 	overflow: hidden;
-	
+
 	a:link, a:visited {
 		text-decoration: none;
 		color: #009933;
@@ -114,7 +114,7 @@ body {
 		text-decoration: none;
 		color: #009966;
 	}
-	
+
 	#left {
 		float: left;
 	}
@@ -194,7 +194,7 @@ label {
 				background: #121212!important;
 			}
 			}
-			li:hover > ul { 
+			li:hover > ul {
 				opacity: 1;
 				display: block;
 			}
@@ -216,7 +216,7 @@ label {
 			text-align: center;
 			height: 50px;
 		}
-		
+
 }
 
 .logout {
@@ -253,9 +253,9 @@ label {
 		&:hover {
 			color: #009933;
 		}
-			
+
 		}
-		
+
 	}
 }
 
@@ -286,7 +286,7 @@ label {
 		background: #333333;
 		border-top: 3px solid #009966;
 		border-bottom: 3px solid #009966;
-		height: 30px;
+		height: 32px;
 		line-height: 32px;
 	}
 
@@ -325,6 +325,9 @@ label {
 	margin-right: 50px;
 
 	.title {
+		a {
+			color: white;
+		}
 		font-size: 23px;
 		font-weight: bold;
 		text-decoration: underline;
@@ -369,7 +372,7 @@ img {
 		margin-left: 80px;
 	}
 	label {
-		color: green;	
+		color: green;
 		font-weight: bold;
 		font-size: 20px;
 	}
@@ -402,4 +405,19 @@ img {
 		text-decoration: none;
 		color: #009966;
 		}
+}
+
+.likes {
+	float: right;
+	margin-right: 155px;
+	font-weight: bold;
+}
+.like a{
+	font-weight: bold!important;
+}
+
+#likres { color: red!important; font-weight: normal!important;}
+
+.unlike a{
+	font-weight: bold;
 }
