--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,7 +7,7 @@
 		color: green!important;
 	}
 }
-#show_user { 
+#show_user {
 	color: #009933;
 	padding-bottom: 30px;
 }
@@ -50,4 +50,8 @@
 	a {
 	 	color: red;
 	}
+}
+
+.pagination a{
+	color: #009966;;
 }
