--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -259,7 +259,7 @@ label {
 	}
 }
 
-.pagination {
+/*.pagination {
 	list-style: none;
 	display: inline-block;
 	width: 700px;
@@ -297,6 +297,48 @@ label {
 	.next {
 		border-right: 1px solid #009966;
 	}
+}*/
+.pagination {
+  font-size: 12px;
+  height: 36px;
+  margin: 18px 0;
+  font-weight: bold;
+
+}
+.pagination ul {
+  display: inline-block;
+  *display: inline;
+  /* IE7 inline-block hack */
+
+  *zoom: 1;
+  margin-left: 0;
+  margin-bottom: 0;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+.pagination li {
+  display: inline;
+}
+.pagination a {
+  background: #191919;
+  float: left;
+  padding: 0 14px;
+  line-height: 34px;
+  text-decoration: none;
+  border: 3px solid #303030;
+}
+.pagination a:hover,
+.pagination .active a {
+  background-color: #009966;
+  color: white;
+}
+.pagination .active a {
+  color: white;
+  cursor: default;
 }
 #del {
 	float: right;
@@ -311,7 +353,7 @@ label {
 		list-style: none;
 		li {
 				margin-top: 10px;
-				border-bottom: 2px solid #333333;
+				border-bottom: 2px solid #383838;
 		}
 	}
 	a {
@@ -367,7 +409,7 @@ img {
 		text-align: center;
 		color: #009966;
 		font-size: 35px;
-		border-bottom: 2px solid #333333;
+		border-bottom: 2px solid #383838;
 		margin-right: 80px;
 		margin-left: 80px;
 	}
@@ -398,7 +440,7 @@ img {
 		list-style: none;
 		li {
 				margin-top: 10px;
-				border-bottom: 2px solid #333333;
+				border-bottom: 2px solid #383838;
 		}
 	}
 	a {
@@ -421,3 +463,4 @@ img {
 .unlike a{
 	font-weight: bold;
 }
+
