--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -31,3 +31,46 @@ input[type=file] {
 	color: red;
 	border: 1px solid red;
 }
+
+h2 {
+	text-align: center;
+	color: green;
+}
+
+textarea {
+	display: block;
+	width: 50%;
+	margin-right: auto;
+	margin-left: auto;
+	font-size: 14px;
+	background: #99CCCC;
+	color: black;
+}
+
+h3 {
+	text-align: center;
+	color: #500000;
+	a {
+		color: green;
+	}
+}
+
+#comments {
+	color: white;
+	display: block;
+	width: 80%;
+	margin-left: 10%;
+	small {
+		font-size: 12px;
+	}
+}
+
+#comment {
+	display: block;
+	margin-bottom: 5px;
+	border-bottom: 1px solid #404040;
+	padding-left: 10px;
+	p {
+		padding-top: 5px;
+	}
+}
