--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
 			<div class="dropdown">
 			<ul>
 				<li>
-					<%= link_to 'Account', '#' %>
+					<%= link_to 'Account', current_user%>
 					<ul>
 						<li class="nav-item">
 							<%= link_to 'Profile', user_path(current_user) %>
@@ -24,7 +24,7 @@
 			</div>
 		<% end %>
 		<div class="option"><%= link_to('Top List', top_list_path) %></div>
-		<div class="option"><%= link_to('Random', '#')%></div>
+		<div class="option"><%= link_to('Random', Post.offset(rand(Post.count)).first)%></div>
 		<% if !logged_in? %>
 			<div class="option"><%= link_to('Log In', login_path )%></div>
 		<% end %>
