--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,7 +2,7 @@
       <div id="comment">
         <p>
                 <small>
-                        Posted <%= time_ago_in_words(comment.created_at) %> ago
+                        Posted <%= time_ago_in_words(comment.created_at) %> ago by <%= link_to " #{comment.user.name }", comment.user %>
                 </small>
                 <br/>
                 <span><%= comment.body %></span>
